# sir_bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE.md  SECURITY.md  database.sqlite  prerecordedtable_example.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
migrations/: 01_initial_migration.sql
src/: event_handler.rs  main.rs  sir_error.rs
src/commands/: about.rs  join.rs  leave.rs  mod.rs  rate.rs  reload_messages.rs  say.rs  show_gnome.rs
