[package]
name = "sir_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.12.0", features = ["client", "standard_framework", "voice"]}
curl = "0.4.44"
reqwest = {version = "0.11.23", features = ['json']}
futures = "0.3.29"
tokio = {version = "1", features = ["full"]}
urlencoding = "2.1.3"
songbird = {version = "0.4", features = ["builtin-queue"]}
symphonia = {version = "0.5.2", features = ["mp3"]}
