[package]
name = "sir_bot"
version = "1.2.0"
edition = "2021"
authors = "Jemma Frost"
description = "A simple tts discord bot interacting with NovelAI's tts api."
readme = "./readme.md"
documentation = "https://githum.com/Fritzbox2000/sir_bot/readme.md"
homepage = "https://github.com/Fritzbox2000/sir_bot"
repository = "https://github.com/Fritzbox2000/sir_bot/"
categories = ["accessibility", "multimedia::audio"]
license-file = "./LICENSE.md"
keywords = ["discord bot", "serenity", "gnomes"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.12.0", features = ["client", "standard_framework", "voice"]}
reqwest = {version = "0.11.23", features = ['json','rustls-tls'], default-features = false}
tokio = {version = "1", features = ["full"]}
poise = {version = "0.6.1"}
urlencoding = "2.1.3"
songbird = {version = "0.4", features = ["builtin-queue"]}
symphonia = {version = "0.5.2", features = ["mp3"]}
serde = "1.0.195"
toml = "0.8.8"
rand = "0.8.5"
num = "0.4.1"
bytes = "1.5.0"
log = "0.4.20"
env_logger = "0.11.1"
thiserror = "1.0.57"
